--- a/uchat_backend/templates/chat/chat_section.html
+++ b/uchat_backend/templates/chat/chat_section.html
@@ -1,3 +1,5 @@
 {% include "chat/chat_section_chatheader.html" %}
-{% include "chat/chat_section_chatarea.html" %}
-{% include "chat/chat_section_chatsend.html" %}
+<div class="chat-inner-container">
+	{% include "chat/chat_section_chatarea.html" %}
+	{% include "chat/chat_section_chatsend.html" %}
+</div>
