--- a/uchat_backend/templates/chat/chat_section_chatsend.html
+++ b/uchat_backend/templates/chat/chat_section_chatsend.html
@@ -1,9 +1,9 @@
-<div class="row">
+<div class="chatsend">
 	<form id="chatform">
-		<div class="col-xs-10 ">
-			<textarea rows="1" id="chatmessage" class="form-control"></textarea>
+		<div class="inputbox col-sm-10">
+			<textarea rows="1" id="chatmessage" class="form-control"></textarea class="textarea">
 		</div>
-		<div class="col-xs-2 ">
+		<div class="col-sm-2">
 			<button class="btn btn-block btn-success" id="chatsend" >Send</button>
 		</div>
 	</form>
