--- a/uchat_backend/static/css/chat/chat_section.css
+++ b/uchat_backend/static/css/chat/chat_section.css
@@ -1,37 +1,79 @@
-.chatarea{
-	
-	border-radius: 8px;
+.chat-heading{
+	height: 69px;
 	width: 100%;
-	height: 85vh;
+
+}
+
+.chat-inner-container {
+	position: relative;
+	height: calc(100% - 80px);
+	background-color: red;
+}
+/* ================ chatarea css ================== */
+.chatarea{
+	flex: 1 1 0;
+	width: 100%;
+	position: absolute;
 	background-color: white;
-	overflow: auto;
+	/*overflow-x: auto;*/
+	height: calc(100% - 52px);
 	overflow-y: scroll;
-	float: left;
+	/*overflow: hidden;*/
+	top:0;
+	padding-left: 15px;
+	padding-right: 15px;
+}
+
+.chat-container .container {
+	margin-right: 0;
+	width: 100%;
+	background-color: #eaeaec;
 	padding-bottom: 10px;
-
+	border-bottom: 1px solid #303641;;
 }
 
-.chat-force-overflow
-{
-	min-height: 450px;
+.chatsend{
+	padding-top: 10px;
+	background-color: #eaeaec;
+	width: 100%;
+	min-height: 52px;
+	position: absolute;
+	bottom:0;
+	left: 0;
 }
 
-#chat::-webkit-scrollbar-track
+.chatsend .inputbox {
+	/*width: inherit;
+	background-color: #ffffff;
+	border-width: 1px;
+    border-style: solid;
+    box-sizing: border-box;*/
+}
+
+.chatsend textarea {
+	word-wrap: break-word;
+    white-space: pre-wrap;
+    /*overflow-y: scroll;*/
+    /*overflow-x: hidden;*/
+    overflow:hidden;
+}
+
+#chat1::-webkit-scrollbar-track
 {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 	border-radius: 10px;
 	background-color: #F5F5F5;
 }
 
-#chat::-webkit-scrollbar
+#chat1::-webkit-scrollbar
 {
 	width: 8px;
 	background-color: #F5F5F5;
 }
 
-#chat::-webkit-scrollbar-thumb
+#chat1::-webkit-scrollbar-thumb
 {
 	border-radius: 10px;
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: lightgrey;
+	background-color: #eaeaec;
 }
