--- a/uchat_backend/templates/chat/chat_section_chatheader.html
+++ b/uchat_backend/templates/chat/chat_section_chatheader.html
@@ -1,6 +1,5 @@
-<div class="row container">
+<div class=" container">
 	<div class="col-sm-12">
 		<h1 class="text-left" id="friend-name-heading"> </h1>		
 	</div>
 </div>
-<hr>
