--- a/uchat_backend/templates/chat/index.html
+++ b/uchat_backend/templates/chat/index.html
@@ -29,15 +29,23 @@
 			{% include "chat/bot_section.html" %}
 		</div>
 	</div>
+
+	{% include "chat/details_section_friendadd.html" %}
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<!-- <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script> -->
+	<script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 	<script type="text/javascript" src="/static/js/chat/initial.js"></script>
+
 	<script type="text/javascript" src="/static/js/chat/typeahead.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.min.js"></script>
+	
+
 	<script type="text/javascript" src="/static/js/chat/main.js"></script>
 	<script type="text/javascript" src="/static/js/chat/friendModal.js"></script>
 	<script type="text/javascript" src="/static/js/chat/loadmoreFriends.js"></script>
+	<script type="text/javascript" src="/static/js/chat/searchbar.js"></script>
 	<script type="text/javascript" src="/static/reconnecting-websocket.min.js"></script>
+
 	<script type="text/javascript" src="/static/js/chat/chat.js"></script>
 
 
