--- a/uchat_backend/templates/chat/bot_section.html
+++ b/uchat_backend/templates/chat/bot_section.html
@@ -1,3 +1,5 @@
-<div class="botarea row ">
-	<h1 class="text-center">Hello World</h1>	
+{% include "chat/bot_section_header.html" %}
+<div class="chat-inner-container">
+	{% include "chat/bot_section_chatarea.html" %}
+	{% include "chat/bot_section_chatsend.html" %}
 </div>
