--- a/uchat_backend/templates/chat/index.html
+++ b/uchat_backend/templates/chat/index.html
@@ -47,7 +47,7 @@
 	<script type="text/javascript" src="/static/reconnecting-websocket.min.js"></script>
 
 	<script type="text/javascript" src="/static/js/chat/chat.js"></script>
-
+	<script type="text/javascript" src="/static/js/chat/botchat.js"></script>
 
 </body>
 
