--- a/uchat_backend/templates/chat/details_section.html
+++ b/uchat_backend/templates/chat/details_section.html
@@ -6,7 +6,7 @@
 			{{loggeduser.name|title}}
 			<!-- Temp Hidden username -->
 			<to class="hidden" id="user-info-username">{{loggeduser.username}}</to>
-			<span class="badge badge-success">3</span>
+			<!-- <span class="badge badge-success">3</span> -->
 		</h2>
 
 		<div class="friends-group-search searchbar-container">
@@ -19,19 +19,10 @@
 		</div>
 
 		<div class="chat-group" id="group-2">
-			<strong>Groups</strong>
+			<strong>Groups <span class="pull-right glyphicon glyphicon-plus"  title="Add Friend" style="cursor:pointer" id="sidebar-add-friend" data-toggle="modal" data-target="#addFriendModal" aria-hidden="true" ></span></strong>
 
-			<a href="#" id="sample-user-123" data-conversation-history="#sample_history">
-				<span class="user-status is-online"></span>
-				<em>Table Tennis</em>
-				<!-- <span class="badge badge-info">1</span> -->
-			</a>
-
-			<a href="#" id="sample-user-123" data-conversation-history="#sample_history">
-				<span class="user-status is-online"></span>
-				<em>Gaming crew</em>
-				<span class="badge badge-info">1655</span>
-			</a>
+			{% include "chat/details_section_group.html" %}
+			
 		</div>
 	</div>
 </div>
